--- a/08 Objektorientiert/01 - Klassen.ipynb
+++ b/08 Objektorientiert/01 - Klassen.ipynb
@@ -218,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -305,7 +305,7 @@
           "traceback": [
             "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
             "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m a = Ampel()\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m z = \u001b[43ma\u001b[49m\u001b[43m.\u001b[49m\u001b[43m__zustand\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m a = Ampel()\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m z = \u001b[43ma\u001b[49m\u001b[43m.\u001b[49m\u001b[43m__zustand\u001b[49m\n",
             "\u001b[31mAttributeError\u001b[39m: 'Ampel' object has no attribute '__zustand'"
           ]
         }
@@ -313,16 +313,6 @@
       "source": [
         "a = Ampel()\n",
         "z = a.__zustand"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "a = Ampel()\n",
-        "z = a.zustand"
       ]
     },
     {
@@ -335,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -363,9 +353,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "blau\n"
+          ]
+        }
+      ],
       "source": [
         "a._Ampel__zustand = \"blau\"  # was ja eigentlich nicht sein dürfte\n",
         "print(a.getZustand())"
@@ -388,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -397,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -421,9 +419,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hallo, mein Name ist Robby\n",
+            "Hallo, mein Name ist Robert\n",
+            "Hallo, mein Name ist Noname\n",
+            "Hallo, mein Name ist Nr 7\n"
+          ]
+        }
+      ],
       "source": [
         "robby = Roboter(\"Robby\")\n",
         "robby.sagHallo()\n",
@@ -444,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -479,9 +488,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "a: 10  b: 20 U:  60 A:  200\n",
+            "a: 0  b: 30 U:  60 A:  0\n"
+          ]
+        }
+      ],
       "source": [
         "r1 = Rechteck(10,20)\n",
         "print(\"a:\",r1.a,\" b:\",r1.b,  \"U: \", r1.umfang(), \"A: \", r1.flaeche())\n",
@@ -505,10 +523,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Bugatti\n",
+            "Porsche\n",
+            "Noname\n"
+          ]
+        }
+      ],
+      "source": [
+        "class Auto:\n",
+        "    def __init__(self,marke):\n",
+        "        self.__marke = marke\n",
+        "        \n",
+        "    def getMarke(self):\n",
+        "        try:\n",
+        "            return self.__marke\n",
+        "        except AttributeError:\n",
+        "            return \"Noname\"\n",
+        "        \n",
+        "    def setMarke(self,marke):\n",
+        "        self.__marke = marke\n",
+        "\n",
+        "    def delMarke(self):\n",
+        "        del self.__marke\n",
+        "    \n",
+        "    def nennMarke(self):\n",
+        "        print(self.getMarke())\n",
+        "    \n",
+        "    marke = property(getMarke, setMarke, delMarke)\n",
+        "       \n",
+        "a1 = Auto(\"Bugatti\")\n",
+        "a1.nennMarke()\n",
+        "a1.marke = \"Porsche\"\n",
+        "a1.nennMarke()\n",
+        "del a1.marke\n",
+        "a1.nennMarke()\n",
+        "\n"
+      ]
     }
   ],
   "metadata": {
