--- a/08 Objektorientiert/01 - Klassen.ipynb
+++ b/08 Objektorientiert/01 - Klassen.ipynb
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -174,15 +174,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Robby wurde erschaffen\n",
-            "Robby wurde zerstört\n"
+            "Robby wurde erschaffen\n"
           ]
         },
         {
@@ -191,7 +190,7 @@
               "'Robby'"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -218,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -264,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -295,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -305,7 +304,7 @@
           "traceback": [
             "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
             "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m a = Ampel()\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m z = \u001b[43ma\u001b[49m\u001b[43m.\u001b[49m\u001b[43m__zustand\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m a = Ampel()\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m z = \u001b[43ma\u001b[49m\u001b[43m.\u001b[49m\u001b[43m__zustand\u001b[49m\n",
             "\u001b[31mAttributeError\u001b[39m: 'Ampel' object has no attribute '__zustand'"
           ]
         }
@@ -325,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -353,7 +352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -386,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -395,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -419,7 +418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -453,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -488,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -523,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -531,21 +530,30 @@
           "output_type": "stream",
           "text": [
             "Bugatti\n",
-            "Porsche\n",
-            "Noname\n"
+            "Porsche\n"
+          ]
+        },
+        {
+          "ename": "AttributeError",
+          "evalue": "'Auto' object has no attribute '_Auto__marke'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 24\u001b[39m\n\u001b[32m     22\u001b[39m a1.nennMarke()\n\u001b[32m     23\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m a1.marke\n\u001b[32m---> \u001b[39m\u001b[32m24\u001b[39m \u001b[43ma1\u001b[49m\u001b[43m.\u001b[49m\u001b[43mnennMarke\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     26\u001b[39m a2 = Auto()\n\u001b[32m     27\u001b[39m a2.nennMarke()\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 15\u001b[39m, in \u001b[36mAuto.nennMarke\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mnennMarke\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mgetMarke\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 6\u001b[39m, in \u001b[36mAuto.getMarke\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mgetMarke\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m__marke\u001b[49m\n",
+            "\u001b[31mAttributeError\u001b[39m: 'Auto' object has no attribute '_Auto__marke'"
           ]
         }
       ],
       "source": [
         "class Auto:\n",
-        "    def __init__(self,marke):\n",
+        "    def __init__(self,marke = \"Unbekannt\"):\n",
         "        self.__marke = marke\n",
         "        \n",
         "    def getMarke(self):\n",
-        "        try:\n",
-        "            return self.__marke\n",
-        "        except AttributeError:\n",
-        "            return \"Noname\"\n",
+        "        return self.__marke\n",
         "        \n",
         "    def setMarke(self,marke):\n",
         "        self.__marke = marke\n",
@@ -564,6 +572,9 @@
         "a1.nennMarke()\n",
         "del a1.marke\n",
         "a1.nennMarke()\n",
+        "\n",
+        "a2 = Auto()\n",
+        "a2.nennMarke()\n",
         "\n"
       ]
     }
