--- a/Seminarkurs/Lektion 1: Programmierung mit Py.ipynb
+++ b/Seminarkurs/Lektion 1: Programmierung mit Py.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "eabd2e02",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "f8ba9c86",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "35a1823a",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5f942eca",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
     "plt.grid()\n",
     "plt.title(\"Freier Fall aus 100m\")\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   }
  ],
