--- a/08 Objektorientiert/01 - Klassen.ipynb
+++ b/08 Objektorientiert/01 - Klassen.ipynb
@@ -522,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -530,51 +530,58 @@
           "output_type": "stream",
           "text": [
             "Bugatti\n",
-            "Porsche\n"
-          ]
-        },
-        {
-          "ename": "AttributeError",
-          "evalue": "'Auto' object has no attribute '_Auto__marke'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 24\u001b[39m\n\u001b[32m     22\u001b[39m a1.nennMarke()\n\u001b[32m     23\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m a1.marke\n\u001b[32m---> \u001b[39m\u001b[32m24\u001b[39m \u001b[43ma1\u001b[49m\u001b[43m.\u001b[49m\u001b[43mnennMarke\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     26\u001b[39m a2 = Auto()\n\u001b[32m     27\u001b[39m a2.nennMarke()\n",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 15\u001b[39m, in \u001b[36mAuto.nennMarke\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mnennMarke\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mgetMarke\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 6\u001b[39m, in \u001b[36mAuto.getMarke\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mgetMarke\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m__marke\u001b[49m\n",
-            "\u001b[31mAttributeError\u001b[39m: 'Auto' object has no attribute '_Auto__marke'"
+            "10000 km\n",
+            " \n",
+            "Porsche\n",
+            " \n",
+            "Unbekannt\n",
+            "0 km\n",
+            "Audi\n"
           ]
         }
       ],
       "source": [
         "class Auto:\n",
-        "    def __init__(self,marke = \"Unbekannt\"):\n",
+        "    def __init__(self,marke = \"Unbekannt\", km = 0):\n",
         "        self.__marke = marke\n",
+        "        self.__km = km\n",
         "        \n",
-        "    def getMarke(self):\n",
+        "    def __getMarke(self):\n",
         "        return self.__marke\n",
+        "    \n",
+        "    def __getKm(self):\n",
+        "        return f\"{self.__km} km\"\n",
         "        \n",
-        "    def setMarke(self,marke):\n",
+        "    def __setMarke(self,marke):\n",
         "        self.__marke = marke\n",
         "\n",
-        "    def delMarke(self):\n",
+        "    def __setKm(self,km):\n",
+        "        self.__km = km\n",
+        "\n",
+        "    def __delMarke(self):\n",
         "        del self.__marke\n",
         "    \n",
-        "    def nennMarke(self):\n",
-        "        print(self.getMarke())\n",
+        "    def __delKm(self):\n",
+        "        del self.__km\n",
         "    \n",
-        "    marke = property(getMarke, setMarke, delMarke)\n",
+        "    marke = property(__getMarke, __setMarke, __delMarke)\n",
+        "    km = property(__getKm,__setKm,__delKm)\n",
         "       \n",
-        "a1 = Auto(\"Bugatti\")\n",
-        "a1.nennMarke()\n",
-        "a1.marke = \"Porsche\"\n",
-        "a1.nennMarke()\n",
-        "del a1.marke\n",
-        "a1.nennMarke()\n",
+        "a1 = Auto(\"Bugatti\",10000)\n",
+        "print(a1.marke)\n",
+        "print(a1.km)\n",
+        "print(\" \")\n",
         "\n",
+        "a1.marke = \"Porsche\"\n",
+        "print(a1.marke)\n",
+        "del a1.marke\n",
+        "\n",
+        "print(\" \")\n",
         "a2 = Auto()\n",
-        "a2.nennMarke()\n",
+        "print(a2.marke)\n",
+        "print(a2.km)\n",
+        "a2.marke = \"Audi\"\n",
+        "print(a2.marke)\n",
         "\n"
       ]
     }
