--- a/08 Objektorientiert/Klassen/01bP - Klassen.ipynb
+++ b/08 Objektorientiert/Klassen/01bP - Klassen.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 110,
       "id": "566f574f-5d80-47d5-9bcc-e573c24108b3",
       "metadata": {},
       "outputs": [
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 111,
       "id": "6ea9d503-88ed-4730-b080-5a94c0f04973",
       "metadata": {},
       "outputs": [
@@ -122,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 112,
       "id": "63b82e5f-e11f-4df8-8709-56f51989ad9d",
       "metadata": {},
       "outputs": [
@@ -196,30 +196,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 113,
       "id": "d64cbe31",
       "metadata": {},
       "outputs": [],
       "source": [
         "class Auto:\n",
-        "    pass\n"
+        "    __anzahl_autos = 0\n",
+        "    __baujahr_max = 2025\n",
+        "\n",
+        "    @classmethod\n",
+        "    def get_anzahl(cls):\n",
+        "        return cls.__anzahl_autos\n",
+        "\n",
+        "    @classmethod\n",
+        "    def baujahr_max(cls,__baujahr_max):\n",
+        "        cls.__baujahr_max = __baujahr_max\n",
+        "    \n",
+        "    @classmethod\n",
+        "    def get_baujahr_max(cls):\n",
+        "        return cls.__baujahr_max\n",
+        "    \n",
+        "    @classmethod\n",
+        "    def von_string(cls, text: str):\n",
+        "        marke = text.split(\";\")[0]\n",
+        "        baujahr = text.split(\";\")[1]\n",
+        "        return cls(marke, int(baujahr))\n",
+        "#-----------------------------------------------------\n",
+        "    def __init__(self,marke, baujahr):\n",
+        "        self.marke = marke\n",
+        "        self.baujahr = baujahr\n",
+        "        if self.baujahr > Auto.__baujahr_max:\n",
+        "            raise ValueError(\"Baujahr ist zu hoch!!!\")\n",
+        "        else:\n",
+        "            Auto.__anzahl_autos += 1\n",
+        "    "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 114,
       "id": "200de408",
       "metadata": {},
       "outputs": [
         {
-          "ename": "TypeError",
-          "evalue": "Auto() takes no arguments",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m a1 = \u001b[43mAuto\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mVW\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m2010\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m a2 = Auto(\u001b[33m\"\u001b[39m\u001b[33mBMW\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m2015\u001b[39m)\n\u001b[32m      3\u001b[39m a3 = Auto.von_string(\u001b[33m\"\u001b[39m\u001b[33mTesla;2020\u001b[39m\u001b[33m\"\u001b[39m)\n",
-            "\u001b[31mTypeError\u001b[39m: Auto() takes no arguments"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Gesamtanzahl Autos: 3\n",
+            "Max Baujahr erlaubt: 2025\n",
+            "Neues max Baujahr: 2030\n",
+            "Fehler: Baujahr ist zu hoch!!!\n"
           ]
         }
       ],
@@ -231,8 +258,8 @@
         "print(\"Gesamtanzahl Autos:\", Auto.get_anzahl())\n",
         "print(\"Max Baujahr erlaubt:\", Auto.get_baujahr_max())\n",
         "\n",
-        "Auto.baujahr_max = 2030\n",
-        "print(\"Neues max Baujahr:\", Auto.baujahr_max)\n",
+        "Auto.baujahr_max(2030)\n",
+        "print(\"Neues max Baujahr:\", Auto.get_baujahr_max())\n",
         "\n",
         "try:\n",
         "    a4 = Auto(\"Audi\", 2050)\n",
