--- a/08 Objektorientiert/Klassen/01eT - Klassen.ipynb
+++ b/08 Objektorientiert/Klassen/01eT - Klassen.ipynb
@@ -131,33 +131,36 @@
     "        # TODO Falls der optionale Konstruktor-Parameter benutzt wird,\n",
     "        # TODO setzen wir ihn als Startwert\n",
     "        # ...\n",
-    "        self.__privates_attribut = p_parameter\n",
+    "        self.oeffentliches_attribut = p_parameter\n",
     "\n",
     "        # Beispiel: Zähler hochzählen (zeigt Klassenattribut-Nutzung)\n",
     "        Klasse.klassen_attribut += 1\n",
     "\n",
     "    # ---------------- Sichtbarkeiten / Operationen ----------------\n",
-    "    def __private_operation(self):\n",
+    "    def __private_operation(self) -> int:\n",
     "        # nur intern nutzbar\n",
     "        self.__privates_attribut += 1\n",
     "\n",
-    "    def _geschuetzte_operation(self):\n",
+    "    def _geschuetzte_operation(self) -> str:\n",
     "        # Konvention: nur innerhalb der Klasse/Unterklassen verwenden\n",
     "        # TODO alle Buchstaben in Grossbuchstaben umwandeln\n",
-    "        self._geschuetztes_attribut = self._geschuetztes_attribut.upper() \n",
+    "        return self._geschuetztes_attribut.upper()\n",
+    "         \n",
     "        \n",
     "\n",
     "    def oeffentliche_operation(self):\n",
     "        # darf von außen aufgerufen werden\n",
     "        # TODO private Operation aufrufen\n",
     "        # TODO geschützte Operation aufrufen\n",
-    "        pass\n",
+    "        self.__private_operation()\n",
+    "        self._geschuetzte_operation()\n",
     "\n",
     "    def operation1(self, p_parameter):\n",
     "        # TODO Liste genau p_parameter-mal mit 0 füllen\n",
-    "        pass\n",
+    "        self.attribut_kollektion = [0]*p_parameter\n",
     "\n",
-    "    def operation2(self):\n",
+    "\n",
+    "    def operation2(self) -> str:\n",
     "        # gibt zusammengefasste Info über Attribut zurück\n",
     "        return (f\"privat={self.__privates_attribut}, \"\n",
     "                f\"privat mit Zusicherung={self.attribut_mit_zusicherung}, \"\n",
@@ -178,25 +181,24 @@
     "    def __get_zusicherungswert(self):\n",
     "        return self.__attribut_mit_zusicherung\n",
     "    \n",
-    "    # TODO attribut_mit_zusicherung definieren"
+    "    # TODO attribut_mit_zusicherung definieren\n",
+    "    attribut_mit_zusicherung = property(__get_zusicherungswert, __set_zusicherungswert)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "c6e60d08",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Klasse' object has no attribute 'attribut_mit_zusicherung'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m x.oeffentliche_operation()\n\u001b[32m      4\u001b[39m x.operation1(\u001b[32m3\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mx\u001b[49m\u001b[43m.\u001b[49m\u001b[43moperation2\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mKlassenzähler:\u001b[39m\u001b[33m\"\u001b[39m, Klasse.klassen_operation())\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# Konstruktor mit Parameter\u001b[39;00m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 58\u001b[39m, in \u001b[36mKlasse.operation2\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     55\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34moperation2\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m     56\u001b[39m     \u001b[38;5;66;03m# gibt zusammengefasste Info über Attribut zurück\u001b[39;00m\n\u001b[32m     57\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m (\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mprivat=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.__privates_attribut\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m58\u001b[39m             \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mprivat mit Zusicherung=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mattribut_mit_zusicherung\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     59\u001b[39m             \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mgeschuetzt=\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m._geschuetztes_attribut\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     60\u001b[39m             \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33moeffentlich=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.oeffentliches_attribut\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     61\u001b[39m             \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mliste_len=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m.attribut_kollektion)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'Klasse' object has no attribute 'attribut_mit_zusicherung'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "privat=1, privat mit Zusicherung=1, geschuetzt='INTERN', oeffentlich=None, liste_len=3\n",
+      "Klassenzähler: 1\n",
+      "Zusicherung y: 1\n",
+      "Fehler: Zusicherungswert muss > 0 sein\n"
      ]
     }
    ],
