--- a/08_Objektorientiert/Netzwerk/03a - Netzwerk.ipynb
+++ b/08_Objektorientiert/Netzwerk/03a - Netzwerk.ipynb
@@ -98,13 +98,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: flask in /usr/local/python/3.12.1/lib/python3.12/site-packages (3.1.2)\n",
+      "Requirement already satisfied: blinker>=1.9.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from flask) (1.9.0)\n",
+      "Requirement already satisfied: click>=8.1.3 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from flask) (8.3.0)\n",
+      "Requirement already satisfied: itsdangerous>=2.2.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from flask) (2.2.0)\n",
+      "Requirement already satisfied: jinja2>=3.1.2 in /home/codespace/.local/lib/python3.12/site-packages (from flask) (3.1.6)\n",
+      "Requirement already satisfied: markupsafe>=2.1.1 in /home/codespace/.local/lib/python3.12/site-packages (from flask) (3.0.2)\n",
+      "Requirement already satisfied: werkzeug>=3.1.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from flask) (3.1.3)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install flask"
    ]
@@ -120,16 +138,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on all addresses (0.0.0.0)\n",
+      " * Running on http://127.0.0.1:12345\n",
+      " * Running on http://10.0.12.167:12345\n",
+      "Press CTRL+C to quit\n"
+     ]
+    }
+   ],
    "source": [
     "from flask import Flask, request, jsonify\n",
     "\n",
-    "app = Flask(__name__)\n",
+    "app = Flask(__name__)       # __name__ -> Dateiname\n",
     "\n",
     "# Route für die Hauptseite\n",
     "@app.route('/')\n",
     "def home():\n",
     "    return \"Server ist bereit und wartet auf Anfragen.\"\n",
+    "\n",
+    "# Neue Route wenn \"/profil\" angefügt wird\n",
+    "@app.route('/profil')\n",
+    "def impressum():\n",
+    "    return \"Ich bin Theodor Franz Müller\"\n",
     "\n",
     "# Route zum Empfangen von Nachrichten\n",
     "@app.route('/message', methods=['POST'])\n",
@@ -142,6 +185,17 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run(host='0.0.0.0', port=12345)  # Server starten"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Erklärung\n",
+    "- `__name__` = Dateiname\n",
+    "- Mit `@app.route('/')` richtet man ein, dass der Server bei Aufruf von `127.0.0.1:12345/` die nachfolgende Methode aufruft. Der Rückgabewert der Methode wird an den client gesendet.\n",
+    "- Mit `@app.route('/profil')` richtet man eine weitere Route mit einer weiteren Methode ein (`127.0.0.1:12345/profil`)\n",
+    "- Mit dem optionalen Parameter `methods`=['POST'] wird festgelegt, dass die Methode zusätzlich Daten erhält. Diese liegen im JSON-Format bereit."
    ]
   },
   {
@@ -261,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
