--- a/08_Objektorientiert/Klassen/01f - Übung.ipynb
+++ b/08_Objektorientiert/Klassen/01f - Übung.ipynb
@@ -46,27 +46,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c56bd0c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Max Mustermann', 'jahrgang': 1990, 'staerke': 8, 'torschuss': 7, 'motivation': 9}\n"
+     ]
+    }
+   ],
    "source": [
     "class Spieler:\n",
     "\n",
     "    def __init__(self, name:str, jahrgang:int, staerke:int, torschuss:int, motivation:int):\n",
     "        self.name: str = name\n",
     "        self.jahrgang: int = jahrgang\n",
+    "        if 0 > staerke > 10:\n",
+    "            raise ValueError(\"Stärke muss zwischen 0 und 10 liegen.\")\n",
     "        self.staerke: int = staerke\n",
+    "        if 0 > torschuss > 10:\n",
+    "            raise ValueError(\"Torschuss muss zwischen 0 und 10 liegen.\")\n",
     "        self.torschuss: int = torschuss\n",
+    "        if 0 > motivation > 10:\n",
+    "            raise ValueError(\"Motivation muss zwischen 0 und 10 liegen.\")\n",
     "        self.motivation: int = motivation\n",
     "    \n",
-    "    def __na_zusicherung(self, wert)\n"
+    "    def to_dict(self) -> dict:\n",
+    "        return {\n",
+    "            \"name\": self.name,\n",
+    "            \"jahrgang\": self.jahrgang,\n",
+    "            \"staerke\": self.staerke,\n",
+    "            \"torschuss\": self.torschuss,\n",
+    "            \"motivation\": self.motivation\n",
+    "        }\n",
+    "\n",
+    "s1 = Spieler(\"Max Mustermann\", 1990, 8, 7, 9)\n",
+    "print(s1.to_dict())\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
