--- a/08_Objektorientiert/03_Netzwerk/03a - Netzwerk.ipynb
+++ b/08_Objektorientiert/03_Netzwerk/03a - Netzwerk.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -195,7 +195,9 @@
     "- `__name__` = Dateiname\n",
     "- Mit `@app.route('/')` richtet man ein, dass der Server bei Aufruf von `127.0.0.1:12345/` die nachfolgende Methode aufruft. Der Rückgabewert der Methode wird an den client gesendet.\n",
     "- Mit `@app.route('/profil')` richtet man eine weitere Route mit einer weiteren Methode ein (`127.0.0.1:12345/profil`)\n",
-    "- Mit dem optionalen Parameter `methods`=['POST'] wird festgelegt, dass die Methode zusätzlich Daten erhält. Diese liegen im JSON-Format bereit."
+    "- Mit dem optionalen Parameter `methods`=['POST'] wird festgelegt, dass die Methode zusätzlich Daten erhält. Diese liegen im JSON-Format bereit.\n",
+    "- Die Variable `request` ist eine kontext-gebundene Variable. Sie erhält für den aktuellen Aufruf alle Daten, die durch und mit dem Aufruf entstanden sind.\n",
+    "- `JSON` ist ein Datenformat zur Übertragung zwischen server und client. Näheres siehe unten. Es ist - in Python - ein Dictionaty."
    ]
   },
   {
