--- a/08_Objektorientiert/Spickzettel_Theo_Server.ipynb
+++ b/08_Objektorientiert/Spickzettel_Theo_Server.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac6157f5",
+   "id": "b01e8b36",
    "metadata": {},
    "source": [
     "## Server aufsetzen:\n",
@@ -106,7 +106,71 @@
     "    model_config = {\"validate_assignmet\":True}  #=> Bedingungen in Field() werden dauerhaft geprüft\n",
     "```\n",
     "\n",
-    "-> Field() bedingungen:\n"
+    "-> Field() bedingungen:\n",
+    "- `le` <=\n",
+    "- `lt` <\n",
+    "- `ge` >=\n",
+    "- `gt` >\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a74337df",
+   "metadata": {},
+   "source": [
+    "## UML \n",
+    "### 1. Was ist eine Klasse?\n",
+    "\n",
+    "Eine Klasse ist ein Bauplan für Objekte, bestehend aus: - **Attributen**\n",
+    "(Daten) - **Methoden** (Funktionen)\n",
+    "\n",
+    "------------------------------------------------------------------------\n",
+    "\n",
+    "### 2. UML-Klassenmodell -- Grundstruktur\n",
+    "\n",
+    "    +-----------------------+\n",
+    "    |       Klassenname     |\n",
+    "    +-----------------------+\n",
+    "    |  Attribute            |\n",
+    "    +-----------------------+\n",
+    "    |  Methoden             |\n",
+    "    +-----------------------+\n",
+    "\n",
+    "### UML-Sichtbarkeiten\n",
+    "\n",
+    "  Symbol   Bedeutung\n",
+    "  -------- -----------\n",
+    "  `+`      public\n",
+    "  `-`      private\n",
+    "  `#`      protected\n",
+    "\n",
+    "------------------------------------------------------------------------\n",
+    "\n",
+    "### 3. Wichtige OOP-Konzepte\n",
+    "\n",
+    "```python\n",
+    "class Objekt:\n",
+    "    def __init__(self, a, b, c):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "        self.c = c\n",
+    "```\n",
+    "\n",
+    "-   **Konstruktor:** `__init__`\n",
+    "-   **Kapselung:** private Attribute `__name`\n",
+    "-   **Getter/Setter:** via `@property`\n",
+    "-   **Vererbung:** `class Subclass(BaseClass)`\n",
+    "\n",
+    "## Datenhaltung: Objekte in einer Liste verwalten\n",
+    "```Python\n",
+    "liste = []\n",
+    "\n",
+    "liste.append(Objekt(1, 2, 3))\n",
+    "\n",
+    "for obj in liste:\n",
+    "    print(obj.a, obj.b, obj.c)\n",
+    "```"
    ]
   }
  ],
