--- a/08_Objektorientiert/06_Schnittstellen_und_Vererbung/06a - Schnittstellen und Vererbung.ipynb
+++ b/08_Objektorientiert/06_Schnittstellen_und_Vererbung/06a - Schnittstellen und Vererbung.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 34,
       "id": "beb1528d",
       "metadata": {},
       "outputs": [
@@ -69,6 +69,8 @@
         "            return\n",
         "        self.geschwindigkeit = min(self.geschwindigkeit + delta, self.max_v)\n",
         "        print(f\"Tempo: {self.geschwindigkeit} km/h\")\n",
+        "    \n",
+        "    \n",
         "\n",
         "# Demo\n",
         "a = Auto(\"VW\", \"Golf\", 200)\n",
@@ -93,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 35,
       "id": "98bbbdd2",
       "metadata": {},
       "outputs": [
@@ -140,6 +142,8 @@
         "        self.tempo += delta\n",
         "        print(f\"Fahrrad-Tempo: {self.tempo} km/h\")\n",
         "\n",
+        "    \n",
+        "\n",
         "# Polymorphie über die gemeinsame Schnittstelle\n",
         "print(\"-- Probe mit Auto --\")\n",
         "fahre_probe(Auto(\"BMW\",\"3er\",240))\n",
@@ -165,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 36,
       "id": "ab0560b2",
       "metadata": {},
       "outputs": [
@@ -237,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 37,
       "id": "5edbec33",
       "metadata": {},
       "outputs": [
@@ -262,6 +266,7 @@
         "    def stoppe_motor(self) -> None: ...\n",
         "    @abstractmethod\n",
         "    def beschleunige(self, delta: int) -> None: ...\n",
+        "    \n",
         "\n",
         "class VerbrennerAuto(Fahrzeug):\n",
         "    def __init__(self, marke: str, modell: str):\n",
@@ -309,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 38,
       "id": "dc265567",
       "metadata": {},
       "outputs": [
@@ -375,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 39,
       "id": "bca119a9",
       "metadata": {},
       "outputs": [
@@ -436,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 40,
       "id": "b56b062a",
       "metadata": {},
       "outputs": [
@@ -481,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 41,
       "id": "b742f0f3",
       "metadata": {},
       "outputs": [
@@ -570,6 +575,200 @@
         "   Schreibe eine Methode `lade_auf(kwh: float)` die den Prozentstand passend erhöht (vereinfacht).\n",
         "\n",
         "> **Hinweis:** Teste deine Lösungen mit `assert`-Statements und kurzen Demos.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "fd755450",
+      "metadata": {},
+      "source": [
+        "## Nr. 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "id": "7958d2a1",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Auto lenkt um 30 Grad\n",
+            "Auto lenkt um 0 Grad\n",
+            "Auto lenkt um -50 Grad\n",
+            "Fahrrad lenkt um 30 Grad\n",
+            "Fahrrad lenkt um 0 Grad\n",
+            "Fahrrad lenkt um -50 Grad\n"
+          ]
+        }
+      ],
+      "source": [
+        "#------------------Nr. 1------------------\n",
+        "from typing import Protocol\n",
+        "\n",
+        "class Lenkbar(Protocol):\n",
+        "    def lenke(self, winkel: int) -> None: ...\n",
+        "\n",
+        "class Fahrrad:\n",
+        "    def lenke(self, winkel: int):\n",
+        "        print(f\"Fahrrad lenkt um {winkel} Grad\")\n",
+        "\n",
+        "class Auto:\n",
+        "    def lenke(self, winkel: int):\n",
+        "        print(f\"Auto lenkt um {winkel} Grad\")\n",
+        "\n",
+        "def slalom(fzg: Lenkbar):\n",
+        "    for winkel in (30, 0, -50):\n",
+        "        fzg.lenke(winkel)\n",
+        "\n",
+        "\n",
+        "slalom(Auto())\n",
+        "slalom(Fahrrad())"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c877cd68",
+      "metadata": {},
+      "source": [
+        "## Nr. 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 51,
+      "id": "4146eb00",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Flugzeug hebt ab\n",
+            "Drohne hebt ab\n",
+            "Flugzeug landet\n",
+            "Drohne landet\n"
+          ]
+        }
+      ],
+      "source": [
+        "#------------------Nr. 2------------------\n",
+        "from abc import ABC, abstractmethod\n",
+        "\n",
+        "class Fluggeraet(ABC):\n",
+        "    @abstractmethod\n",
+        "    def abheben(self) -> None: ...\n",
+        "    @abstractmethod\n",
+        "    def landen(self) -> None: ...\n",
+        "\n",
+        "class Flugzeug(Fluggeraet):\n",
+        "    def __init__(self):\n",
+        "        super().__init__()\n",
+        "        self.in_der_Luft = False\n",
+        "\n",
+        "    def abheben(self):\n",
+        "        self.in_der_Luft = True\n",
+        "        print(\"Flugzeug hebt ab\")\n",
+        "        \n",
+        "    \n",
+        "    def landen(self):\n",
+        "        self.in_der_Luft = False\n",
+        "        print(\"Flugzeug landet\")\n",
+        "        \n",
+        "class Drohne(Fluggeraet):\n",
+        "    def __init__(self):\n",
+        "        super().__init__()\n",
+        "        self.in_der_Luft = False\n",
+        "\n",
+        "    def abheben(self):\n",
+        "        self.in_der_Luft = True\n",
+        "        print(\"Drohne hebt ab\")\n",
+        "        \n",
+        "    \n",
+        "    def landen(self):\n",
+        "        self.in_der_Luft = False\n",
+        "        print(\"Drohne landet\")\n",
+        "        \n",
+        "f = Flugzeug()\n",
+        "d = Drohne()\n",
+        "f.abheben()\n",
+        "d.abheben()\n",
+        "f.landen()\n",
+        "d.landen()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "a6150447",
+      "metadata": {},
+      "source": [
+        "## Nr. 3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 50,
+      "id": "608c24c1",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Bugatti Chiron (Benzin/Diesel): Motor an.\n",
+            "Bugatti Chiron: 30 km/h\n",
+            "Bugatti Chiron: 130 km/h\n",
+            "Bugatti Chiron: 10 km/h\n"
+          ]
+        }
+      ],
+      "source": [
+        "#------------------Nr. 3------------------\n",
+        "class Rennwagen(VerbrennerAuto):\n",
+        "    def __init__(self, marke, modell):\n",
+        "        super().__init__(marke, modell)\n",
+        "    \n",
+        "    def beschleunige(self, delta):\n",
+        "        if delta > 100:\n",
+        "            delta = 100\n",
+        "        super().beschleunige(delta)\n",
+        "\n",
+        "r = Rennwagen(\"Bugatti\",\"Chiron\")\n",
+        "r.starte_motor()\n",
+        "r.beschleunige(30)\n",
+        "r.beschleunige(150)\n",
+        "r.beschleunige(-120)\n",
+        "        "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f2845841",
+      "metadata": {},
+      "source": [
+        "## Nr. 4"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "87aed206",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#------------------Nr. 4------------------\n",
+        "class Akku:\n",
+        "    def __init__(self, kapazitaet: float, stand_prozent: int):\n",
+        "        self.kapazitaet_kwh = kapazitaet\n",
+        "        self.stand_prozent = stand_prozent\n",
+        "    \n",
+        "    def lade_auf(self, kwh: float):   # 50 kw * zeit in h\n",
+        "        self.stand_prozent = (kwh / (self.kapazitaet_kwh / 100)) + self.stand_prozent\n",
+        "        if self.stand_prozent > 100:\n",
+        "            self.stand_prozent = 100\n",
+        "        print(f\"Akku auf {self.stand_prozent:.1f}% geladen\")\n"
       ]
     }
   ],
