--- a/Seminarkurs/Chaotisches Pendel.ipynb
+++ b/Seminarkurs/Chaotisches Pendel.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "303bdb7a",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "3e28a14a",
    "metadata": {},
    "outputs": [
@@ -260,42 +260,42 @@
        "</style>\n",
        "\n",
        "<div class=\"animation\">\n",
-       "  <img id=\"_anim_img9f4d516618f94ab88ba723d18d8ad87b\">\n",
+       "  <img id=\"_anim_img3e89eec63ef14258b0034b98b2ef5925\">\n",
        "  <div class=\"anim-controls\">\n",
-       "    <input id=\"_anim_slider9f4d516618f94ab88ba723d18d8ad87b\" type=\"range\" class=\"anim-slider\"\n",
+       "    <input id=\"_anim_slider3e89eec63ef14258b0034b98b2ef5925\" type=\"range\" class=\"anim-slider\"\n",
        "           name=\"points\" min=\"0\" max=\"1\" step=\"1\" value=\"0\"\n",
-       "           oninput=\"anim9f4d516618f94ab88ba723d18d8ad87b.set_frame(parseInt(this.value));\">\n",
+       "           oninput=\"anim3e89eec63ef14258b0034b98b2ef5925.set_frame(parseInt(this.value));\">\n",
        "    <div class=\"anim-buttons\">\n",
-       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anim9f4d516618f94ab88ba723d18d8ad87b.slower()\">\n",
+       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.slower()\">\n",
        "          <i class=\"fa fa-minus\"></i></button>\n",
-       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anim9f4d516618f94ab88ba723d18d8ad87b.first_frame()\">\n",
+       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.first_frame()\">\n",
        "        <i class=\"fa fa-fast-backward\"></i></button>\n",
-       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anim9f4d516618f94ab88ba723d18d8ad87b.previous_frame()\">\n",
+       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.previous_frame()\">\n",
        "          <i class=\"fa fa-step-backward\"></i></button>\n",
-       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anim9f4d516618f94ab88ba723d18d8ad87b.reverse_animation()\">\n",
+       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.reverse_animation()\">\n",
        "          <i class=\"fa fa-play fa-flip-horizontal\"></i></button>\n",
-       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anim9f4d516618f94ab88ba723d18d8ad87b.pause_animation()\">\n",
+       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.pause_animation()\">\n",
        "          <i class=\"fa fa-pause\"></i></button>\n",
-       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anim9f4d516618f94ab88ba723d18d8ad87b.play_animation()\">\n",
+       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.play_animation()\">\n",
        "          <i class=\"fa fa-play\"></i></button>\n",
-       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anim9f4d516618f94ab88ba723d18d8ad87b.next_frame()\">\n",
+       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.next_frame()\">\n",
        "          <i class=\"fa fa-step-forward\"></i></button>\n",
-       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anim9f4d516618f94ab88ba723d18d8ad87b.last_frame()\">\n",
+       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.last_frame()\">\n",
        "          <i class=\"fa fa-fast-forward\"></i></button>\n",
-       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anim9f4d516618f94ab88ba723d18d8ad87b.faster()\">\n",
+       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.faster()\">\n",
        "          <i class=\"fa fa-plus\"></i></button>\n",
        "    </div>\n",
-       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_select9f4d516618f94ab88ba723d18d8ad87b\"\n",
+       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_select3e89eec63ef14258b0034b98b2ef5925\"\n",
        "          class=\"anim-state\">\n",
-       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_9f4d516618f94ab88ba723d18d8ad87b\"\n",
+       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_3e89eec63ef14258b0034b98b2ef5925\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio1_9f4d516618f94ab88ba723d18d8ad87b\">Once</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_9f4d516618f94ab88ba723d18d8ad87b\"\n",
+       "      <label for=\"_anim_radio1_3e89eec63ef14258b0034b98b2ef5925\">Once</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_3e89eec63ef14258b0034b98b2ef5925\"\n",
        "             checked>\n",
-       "      <label for=\"_anim_radio2_9f4d516618f94ab88ba723d18d8ad87b\">Loop</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_9f4d516618f94ab88ba723d18d8ad87b\"\n",
+       "      <label for=\"_anim_radio2_3e89eec63ef14258b0034b98b2ef5925\">Loop</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_3e89eec63ef14258b0034b98b2ef5925\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio3_9f4d516618f94ab88ba723d18d8ad87b\">Reflect</label>\n",
+       "      <label for=\"_anim_radio3_3e89eec63ef14258b0034b98b2ef5925\">Reflect</label>\n",
        "    </form>\n",
        "  </div>\n",
        "</div>\n",
@@ -305,9 +305,9 @@
        "  /* Instantiate the Animation class. */\n",
        "  /* The IDs given should match those used in the template above. */\n",
        "  (function() {\n",
-       "    var img_id = \"_anim_img9f4d516618f94ab88ba723d18d8ad87b\";\n",
-       "    var slider_id = \"_anim_slider9f4d516618f94ab88ba723d18d8ad87b\";\n",
-       "    var loop_select_id = \"_anim_loop_select9f4d516618f94ab88ba723d18d8ad87b\";\n",
+       "    var img_id = \"_anim_img3e89eec63ef14258b0034b98b2ef5925\";\n",
+       "    var slider_id = \"_anim_slider3e89eec63ef14258b0034b98b2ef5925\";\n",
+       "    var loop_select_id = \"_anim_loop_select3e89eec63ef14258b0034b98b2ef5925\";\n",
        "    var frames = new Array(40);\n",
        "    \n",
        "  frames[0] = \"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAoAAAAHgCAYAAAA10dzkAAAAOnRFWHRTb2Z0d2FyZQBNYXRwbG90\\\n",
@@ -18661,7 +18661,7 @@
        "    /* set a timeout to make sure all the above elements are created before\n",
        "       the object is initialized. */\n",
        "    setTimeout(function() {\n",
-       "        anim9f4d516618f94ab88ba723d18d8ad87b = new Animation(frames, img_id, slider_id, 29.0,\n",
+       "        anim3e89eec63ef14258b0034b98b2ef5925 = new Animation(frames, img_id, slider_id, 29.0,\n",
        "                                 loop_select_id);\n",
        "    }, 0);\n",
        "  })()\n",
@@ -18733,7 +18733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "9472b5d8",
    "metadata": {},
    "outputs": [
@@ -18925,42 +18925,42 @@
        "</style>\n",
        "\n",
        "<div class=\"animation\">\n",
-       "  <img id=\"_anim_imga60b1db9ca5b43cc8d21f1946ea53fd7\">\n",
+       "  <img id=\"_anim_img068df971cd124189b119c4ee10f69a77\">\n",
        "  <div class=\"anim-controls\">\n",
-       "    <input id=\"_anim_slidera60b1db9ca5b43cc8d21f1946ea53fd7\" type=\"range\" class=\"anim-slider\"\n",
+       "    <input id=\"_anim_slider068df971cd124189b119c4ee10f69a77\" type=\"range\" class=\"anim-slider\"\n",
        "           name=\"points\" min=\"0\" max=\"1\" step=\"1\" value=\"0\"\n",
-       "           oninput=\"anima60b1db9ca5b43cc8d21f1946ea53fd7.set_frame(parseInt(this.value));\">\n",
+       "           oninput=\"anim068df971cd124189b119c4ee10f69a77.set_frame(parseInt(this.value));\">\n",
        "    <div class=\"anim-buttons\">\n",
-       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anima60b1db9ca5b43cc8d21f1946ea53fd7.slower()\">\n",
+       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anim068df971cd124189b119c4ee10f69a77.slower()\">\n",
        "          <i class=\"fa fa-minus\"></i></button>\n",
-       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anima60b1db9ca5b43cc8d21f1946ea53fd7.first_frame()\">\n",
+       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anim068df971cd124189b119c4ee10f69a77.first_frame()\">\n",
        "        <i class=\"fa fa-fast-backward\"></i></button>\n",
-       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anima60b1db9ca5b43cc8d21f1946ea53fd7.previous_frame()\">\n",
+       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anim068df971cd124189b119c4ee10f69a77.previous_frame()\">\n",
        "          <i class=\"fa fa-step-backward\"></i></button>\n",
-       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anima60b1db9ca5b43cc8d21f1946ea53fd7.reverse_animation()\">\n",
+       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anim068df971cd124189b119c4ee10f69a77.reverse_animation()\">\n",
        "          <i class=\"fa fa-play fa-flip-horizontal\"></i></button>\n",
-       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anima60b1db9ca5b43cc8d21f1946ea53fd7.pause_animation()\">\n",
+       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anim068df971cd124189b119c4ee10f69a77.pause_animation()\">\n",
        "          <i class=\"fa fa-pause\"></i></button>\n",
-       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anima60b1db9ca5b43cc8d21f1946ea53fd7.play_animation()\">\n",
+       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anim068df971cd124189b119c4ee10f69a77.play_animation()\">\n",
        "          <i class=\"fa fa-play\"></i></button>\n",
-       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anima60b1db9ca5b43cc8d21f1946ea53fd7.next_frame()\">\n",
+       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anim068df971cd124189b119c4ee10f69a77.next_frame()\">\n",
        "          <i class=\"fa fa-step-forward\"></i></button>\n",
-       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anima60b1db9ca5b43cc8d21f1946ea53fd7.last_frame()\">\n",
+       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anim068df971cd124189b119c4ee10f69a77.last_frame()\">\n",
        "          <i class=\"fa fa-fast-forward\"></i></button>\n",
-       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anima60b1db9ca5b43cc8d21f1946ea53fd7.faster()\">\n",
+       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anim068df971cd124189b119c4ee10f69a77.faster()\">\n",
        "          <i class=\"fa fa-plus\"></i></button>\n",
        "    </div>\n",
-       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_selecta60b1db9ca5b43cc8d21f1946ea53fd7\"\n",
+       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_select068df971cd124189b119c4ee10f69a77\"\n",
        "          class=\"anim-state\">\n",
-       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_a60b1db9ca5b43cc8d21f1946ea53fd7\"\n",
+       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_068df971cd124189b119c4ee10f69a77\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio1_a60b1db9ca5b43cc8d21f1946ea53fd7\">Once</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_a60b1db9ca5b43cc8d21f1946ea53fd7\"\n",
+       "      <label for=\"_anim_radio1_068df971cd124189b119c4ee10f69a77\">Once</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_068df971cd124189b119c4ee10f69a77\"\n",
        "             checked>\n",
-       "      <label for=\"_anim_radio2_a60b1db9ca5b43cc8d21f1946ea53fd7\">Loop</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_a60b1db9ca5b43cc8d21f1946ea53fd7\"\n",
+       "      <label for=\"_anim_radio2_068df971cd124189b119c4ee10f69a77\">Loop</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_068df971cd124189b119c4ee10f69a77\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio3_a60b1db9ca5b43cc8d21f1946ea53fd7\">Reflect</label>\n",
+       "      <label for=\"_anim_radio3_068df971cd124189b119c4ee10f69a77\">Reflect</label>\n",
        "    </form>\n",
        "  </div>\n",
        "</div>\n",
@@ -18970,9 +18970,9 @@
        "  /* Instantiate the Animation class. */\n",
        "  /* The IDs given should match those used in the template above. */\n",
        "  (function() {\n",
-       "    var img_id = \"_anim_imga60b1db9ca5b43cc8d21f1946ea53fd7\";\n",
-       "    var slider_id = \"_anim_slidera60b1db9ca5b43cc8d21f1946ea53fd7\";\n",
-       "    var loop_select_id = \"_anim_loop_selecta60b1db9ca5b43cc8d21f1946ea53fd7\";\n",
+       "    var img_id = \"_anim_img068df971cd124189b119c4ee10f69a77\";\n",
+       "    var slider_id = \"_anim_slider068df971cd124189b119c4ee10f69a77\";\n",
+       "    var loop_select_id = \"_anim_loop_select068df971cd124189b119c4ee10f69a77\";\n",
        "    var frames = new Array(40);\n",
        "    \n",
        "  frames[0] = \"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAoAAAAHgCAYAAAA10dzkAAAAOnRFWHRTb2Z0d2FyZQBNYXRwbG90\\\n",
@@ -30225,7 +30225,7 @@
        "    /* set a timeout to make sure all the above elements are created before\n",
        "       the object is initialized. */\n",
        "    setTimeout(function() {\n",
-       "        anima60b1db9ca5b43cc8d21f1946ea53fd7 = new Animation(frames, img_id, slider_id, 29.0,\n",
+       "        anim068df971cd124189b119c4ee10f69a77 = new Animation(frames, img_id, slider_id, 29.0,\n",
        "                                 loop_select_id);\n",
        "    }, 0);\n",
        "  })()\n",
@@ -30292,6 +30292,27 @@
     "\n",
     "#plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b05c6b37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "g = 9.81\n",
+    "l1 = 0.20  # Länge\n",
+    "t1 = 0  # Zeit\n",
+    "w1 = math.sqrt(g/l1)  # Auslenkung vom Lot\n",
+    "y = 0\n",
+    "x = 0\n",
+    "\n",
+    "x1 = x * math.cos(math.radians(w1*t1))"
    ]
   }
  ],
